# cdr_bench

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CLAUDE.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
api/dr_methods/: index.html
api/features/: index.html
api/io_utils/: index.html
api/optimization/: index.html
api/scoring/: index.html
api/visualization/: index.html
bench_configs/method_configs/: gtm_config.toml  tmap_config.toml
development/architecture/: index.html
development/contributing/: index.html
docs/: index.md
docs/api/: dr_methods.md  features.md  io_utils.md  optimization.md  scoring.md  visualization.md
docs/development/: architecture.md  contributing.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: cli.md  configuration.md  data-pipeline.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
scripts/: analyze_lib_distance_preservation.py  analyze_results.py  generate_descriptors.py  prepare_lolo.py  run_benchmarking.py
search/: search_index.json
src/cdr_bench/dr_methods/: dimensionality_reduction.py
src/cdr_bench/features/: chemdist_features.py  feature_preprocessing.py  physchem.py
src/cdr_bench/io_utils/: __init__.py  data_preprocessing.py  io.py  prepare_lolo.py
src/cdr_bench/optimization/: __init__.py  optimization.py  params.py
src/cdr_bench/scoring/: __init__.py  chemsim_stat.py  network_stat.py  scaffold_stat.py  scoring.py
src/cdr_bench/visualization/: visualization.py  visualization_3D.py  visualize_stats.py
tests/: conftest.py
tests/test_dr_methods/: test_dimensionality_reduction.py
tests/test_features/: test_feature_preprocessing.py
tests/test_io_utils/: test_data_preprocessing.py  test_io.py
tests/test_optimization/: test_optimization.py  test_params.py
tests/test_scoring/: test_chemsim_stat.py  test_network_stat.py  test_scaffold_stat.py  test_scoring.py
user-guide/cli/: index.html
user-guide/configuration/: index.html
user-guide/data-pipeline/: index.html
