[project]
name = "cdr_bench"
version = "0.1.0"
description = "Scripts for performing dimensionality reduction on chemical datasets"
authors = [
    {name = "Alexey Orlov", email = "data2scale@gmail.com"}
]
dependencies = [
    "setuptools>=74.1.2",
    "h5py",
    "numpy",
    "pandas",
    "scipy>=1.14.1",
    "matplotlib>=3.9.2",
    "scikit-learn>=1.5.2",
    "numba>=0.60.0",
    "toml>=0.10.2",
    "seaborn>=0.13.2",
    "tqdm>=4.66.5",
    "rdkit>=2024.3.5",
    "openTSNE>=1.0.2",
    "chemographykit",
    "umap-learn>=0.5.6",
    "dgllife>=0.3.2",
    "lightning>=2.4.0",
    "pandarallel>=1.6.5",
    "ipywidgets>=8.1.5",
    "scikit-dimension>=0.3.4",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Documentation = "https://axelrolov.github.io/cdr_bench/"
Repository = "https://github.com/AxelRolov/cdr_bench"
"Bug Tracker" = "https://github.com/AxelRolov/cdr_bench/issues"
Paper = "https://onlinelibrary.wiley.com/doi/full/10.1002/minf.202400265"


[dependency-groups]
dev = [
    "jupyterlab>=4.2.5",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]
